# blog_cms

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint  manage.py  pyproject.toml  start
apps/blog/: models.py
apps/blog/migrations/: 0001_initial.py
apps/home/: models.py
apps/home/templates/home/: home_page.html
blog_cms/: settings.py  urls.py  wsgi.py
blog_cms/settings/: base.py  dev.py
blog_cms/static/js/: blog_cms.js
blog_cms/templates/: base.html  index.html
compose/local/web/: Dockerfile  entrypoint  start
compose/production/nginx/: Dockerfile  nginx.conf
compose/production/web/: Dockerfile  entrypoint
frontend/: package.json  postcss.config.js  tailwind.config.js
frontend/src/application/: app.js
frontend/src/styles/: index.sass  index.scss
frontend/src/styles/base/: _fonts.sass  _variables.sass  base.sass  normalize.sass
frontend/src/styles/utilities/: utilities.sass
frontend/webpack/: webpack.common.js  webpack.config.dev.js  webpack.config.prod.js  webpack.config.watch.js
static/: manifest.58c765cff6bc.json  staticfiles.json
static/css/: app.bb01f57b0380.css  app.css
static/js/: app.6c96e8f28a33.js  app.js  runtime.76bf49859ac2.js  runtime.js  vendors-node_modules_mini-css-extract-plugin_dist_hmr_hotModuleReplacement_js-node_modules_we-1d29f9.12108b4dc731.js  vendors-node_modules_mini-css-extract-plugin_dist_hmr_hotModuleReplacement_js-node_modules_we-1d29f9.js
