[tool.poetry]
name = "wagtail-blog"
version = "0.1.0"
description = ""
authors = ["Ray Luna <leon.luna.ray@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_cms"}]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^5.2.2"
python-webpack-boilerplate = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
