[tool.poetry]
name = "blog-cms"
version = "1.0.0"
description = ""
authors = ["Ray Luna <leon.luna.ray@gmail.com>"]
readme = "README.md"
packages = [{include = "blog_cms"}]

[tool.poetry.dependencies]
django = ">=4.0, <5.0"
gunicorn = "^21.2.0"
python = "^3.10"
python-webpack-boilerplate = "^1.0.2"
wagtail = "^5.2.2"
psycopg2 = "^2.9.9"
django-database-url = "^1.0.3"
whitenoise = "^6.6.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
